# Legacy

./: README.md
documentation/: index.js  package-lock.json  package.json
documentation/.github/workflows/: main.yml
documentation/config/: plugins.ts
documentation/src/api/class/content-types/class/: schema.json
documentation/src/api/method/controllers/: method.ts
documentation/src/api/parameter/controllers/: parameter.ts
documentation/www/: api-styles.css  api.htm  data.js  index.html  style.css
engine/: examples.html  index.html  package-lock.json  package.json  vite.config.ts
engine/public/: scene.blend  scene.blend1
engine/public/Nouveau dossier/scene.blend/: Cube.001.bsm  Cube.001.mat  Decal.dcl  Entity.ent  Plane.bsm  Plane.mat  Player.bsm  Player.mat  Skybox.sky
engine/public/examples/water/: mesh.bwa
engine/src-tauri/: Cargo.toml  tauri.conf.json
engine/src/examples/perf/: perf_screen.js
engine/src/examples/viewer/: viewer_screen.js
engine/src/game/: game_screen.ts
engine/src/lib/ai/: ai_path_graph.ts
engine/src/lib/core/: utils.ts
engine/src/lib/engine/: engine_pack_2d.ts  engine_pack_3d.ts  engine_pack_item_list.ts
engine/src/lib/gfx3_mesh/: gfx3_mesh_decal.ts  gfx3_mesh_material.ts  gfx3_mesh_shader.ts
engine/src/lib/gfx3_water/: gfx3_water.ts  gfx3_water_renderer.ts  gfx3_water_shader.ts
engine/src/lib/ui/: ui_widget.ts
engine/vite/: vite.config.tauri.ts
legacygpu-plugin-blender/: __init__.py  functions.py  operators.py  operators_world.py  panels.py  props.py  utils.py
(+3 files in other folders)
