[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
incremental = true      # Active la réutilisation des parties non modifiées
codegen-units = 16      # Divise le code en 16 morceaux pour compiler en parallèle
lto = "thin"            # Optimisation "légère" : beaucoup plus rapide que le mode par défaut
debug = false           # Pas besoin d'infos de debug pour ton jeu final
strip = true            # Retire les symboles inutiles pour réduire la taille du .exe
opt-level = 1
